--- a/Generator/World/Rooms/Dungeons/Forest Temple.jsonc
+++ b/Generator/World/Rooms/Dungeons/Forest Temple.jsonc
@@ -46,7 +46,7 @@
           },
           {
             "ConnectedArea": "Forest Temple Lobby",
-            "Requirements": "CanDefeatWalltula and CanDefeatBokoblin and canBreakMonkeyCage"
+            "Requirements": "HasHumanForm and CanDefeatWalltula and CanDefeatBokoblin and canBreakMonkeyCage"
           }
         ],
         "Checks": 
