--- a/Generator/World/Rooms/Dungeons/City in the Sky.jsonc
+++ b/Generator/World/Rooms/Dungeons/City in the Sky.jsonc
@@ -64,11 +64,11 @@
         [
           {
             "ConnectedArea": "Lake Hylia",
-            "Requirements": "(Progressive_Clawshot, 1)"
+            "Requirements": "HasHumanForm and (Progressive_Clawshot, 1)"
           },
           {
             "ConnectedArea": "City in The Sky Lobby",
-            "Requirements": "(Progressive_Clawshot, 1)"
+            "Requirements": "HasHumanForm and (Progressive_Clawshot, 1)"
           }
         ],
         "Checks": 
