--- a/Generator/World/Rooms/Overworld/Faron Province/Hyrule Field - Faron.jsonc
+++ b/Generator/World/Rooms/Overworld/Faron Province/Hyrule Field - Faron.jsonc
@@ -5,7 +5,7 @@
     [
       {
         "ConnectedArea": "Faron Field Behind Boulder",
-        "Requirements": "Room.Kakariko_Malo_Mart and Room.Lower_Kakariko_Village and Room.Castle_Town_South and HasBottle and Room.Outside_Castle_Town_South"
+        "Requirements": "HasHumanForm and Room.Kakariko_Malo_Mart and Room.Lower_Kakariko_Village and Room.Castle_Town_South and HasBottle and Room.Outside_Castle_Town_South"
       },
       {
         "ConnectedArea": "South Faron Woods",
@@ -21,11 +21,11 @@
       },
       {
         "ConnectedArea": "Faron Field Corner Grotto",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       },
       {
         "ConnectedArea": "Faron Field Fishing Grotto",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       }
     ],
     "Checks":
@@ -44,7 +44,7 @@
     [
       {
         "ConnectedArea": "Faron Field",
-        "Requirements": "Room.Kakariko_Malo_Mart and Room.Lower_Kakariko_Village and Room.Castle_Town_South and HasBottle and Room.Outside_Castle_Town_South"
+        "Requirements": "HasHumanForm and Room.Kakariko_Malo_Mart and Room.Lower_Kakariko_Village and Room.Castle_Town_South and HasBottle and Room.Outside_Castle_Town_South"
       },
       {
          // If you enter Outside Castle Town from there while the boulder is still there, you get stuck and are forced to save-warp or portal-warp.
