--- a/Generator/World/Rooms/Overworld/Faron Province/Sacred Grove.jsonc
+++ b/Generator/World/Rooms/Overworld/Faron Province/Sacred Grove.jsonc
@@ -30,7 +30,8 @@
     [
       {
         "ConnectedArea": "Lost Woods",
-        "Requirements": "true"
+        "Requirements": "HasHumanForm"
+        // Human form required to climb vines.
       },
       {
         "ConnectedArea": "Sacred Grove Lower",
@@ -101,7 +102,8 @@
       },
       {
         "ConnectedArea": "Sacred Grove Past",
-        "Requirements": "(Setting.totEntrance equals Open) or (Setting.totEntrance equals OpenGrove) or (Room.Sacred_Grove_Lower and (Progressive_Sword, 3) and CanDefeatShadowBeast)"
+        "Requirements": "HasHumanForm and ((Setting.totEntrance equals Open) or (Setting.totEntrance equals OpenGrove) or (Room.Sacred_Grove_Lower and (Progressive_Sword, 3) and CanDefeatShadowBeast))"
+        //Cannot enter the past while in wolf form.
       }
     ],
     "Checks": [""],
@@ -135,11 +137,12 @@
     [
       {
         "ConnectedArea": "Sacred Grove Past Behind Window",
-        "Requirements": "(Setting.totEntrance equals Open) or (Progressive_Sword, 3)"
+        "Requirements": "(Setting.totEntrance equals Open) or (HasHumanForm and (Progressive_Sword, 3))"
       },
       {
         "ConnectedArea": "Sacred Grove Upper",
-        "Requirements": "true"
+        "Requirements": "HasHumanForm"
+        //Cannot enter the present while in wolf form.
       }
     ],
     "Checks":
