--- a/Generator/World/Rooms/Overworld/Gerudo Desert/Gerudo Desert.jsonc
+++ b/Generator/World/Rooms/Overworld/Gerudo Desert/Gerudo Desert.jsonc
@@ -5,7 +5,7 @@
     [
       {
         "ConnectedArea": "Gerudo Desert Cave of Ordeals Plateau",
-        "Requirements": "(Progressive_Clawshot, 1) and CanDefeatShadowBeast"
+        "Requirements": "HasHumanForm and (Progressive_Clawshot, 1) and CanDefeatShadowBeast"
       },
       {
         "ConnectedArea": "Gerudo Desert Basin",
@@ -13,7 +13,7 @@
       },
       {
         "ConnectedArea": "Gerudo Desert Skulltula Grotto",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       }
     ],
     "Checks":
@@ -56,19 +56,19 @@
     [
       {
         "ConnectedArea": "Gerudo Desert",
-        "Requirements": "CanDefeatBulblin"
+        "Requirements": "HasHumanForm and CanDefeatBulblin"
       },
       {
         "ConnectedArea": "Gerudo Desert North East Ledge",
-        "Requirements": "(Progressive_Clawshot, 1)"
+        "Requirements": "HasHumanForm and (Progressive_Clawshot, 1)"
       },
       {
         "ConnectedArea": "Gerudo Desert Outside Bulblin Camp",
-        "Requirements": "CanDefeatBulblin"
+        "Requirements": "HasHumanForm and CanDefeatBulblin"
       },
       {
         "ConnectedArea": "Gerudo Desert Chu Grotto",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       }
     ],
     "Checks": [
@@ -90,7 +90,7 @@
       },
       {
         "ConnectedArea": "Gerudo Desert Rock Grotto",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasHumanForm"
       }
     ],
     "Checks":
@@ -105,7 +105,7 @@
     [
       {
         "ConnectedArea": "Gerudo Desert Basin",
-        "Requirements": "Room.Gerudo_Desert_Basin and CanDefeatBulblin"
+        "Requirements": "Room.Gerudo_Desert_Basin and HasHumanForm and CanDefeatBulblin"
       },
       {
         "ConnectedArea": "Bulblin Camp",
