--- a/Generator/World/Rooms/Overworld/Lanayru Province/Lake Hylia.jsonc
+++ b/Generator/World/Rooms/Overworld/Lanayru Province/Lake Hylia.jsonc
@@ -9,19 +9,19 @@
       },
       {
         "ConnectedArea": "Lake Hylia Lakebed Temple Entrance",
-        "Requirements": "Zora_Armor and ((Setting.skipLakebedEntrance equals True) or (Iron_Boots and CanUseWaterBombs))"
+        "Requirements": "HasHumanForm and Zora_Armor and ((Setting.skipLakebedEntrance equals True) or (Iron_Boots and CanUseWaterBombs))"
       },
       {
         "ConnectedArea": "Lake Hylia Bridge",
-        "Requirements": "true"
+        "Requirements": "HasHumanForm"
       },
       {
         "ConnectedArea": "Gerudo Desert",
-        "Requirements": "Aurus_Memo"
+        "Requirements": "HasHumanForm and Aurus_Memo"
       },
       {
         "ConnectedArea": "Upper Zoras River",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       },
       {
         "ConnectedArea": "Lake Hylia Lanayru Spring",
@@ -38,7 +38,7 @@
       },
       {
         "ConnectedArea": "City in The Sky Entrance",
-        "Requirements": "((Progressive_Sky_Book, 7) or (Setting.skipCityEntrance equals True)) and (Progressive_Clawshot, 1)"
+        "Requirements": "HasHumanForm and ((Progressive_Sky_Book, 7) or (Setting.skipCityEntrance equals True)) and (Progressive_Clawshot, 1)"
       }
     ],
     "Checks":
@@ -83,7 +83,7 @@
     [
       {
         "ConnectedArea": "Lake Hylia",
-        "Requirements": "Zora_Armor and ((Setting.skipLakebedEntrance equals True) or (Iron_Boots and CanUseWaterBombs))"
+        "Requirements": "HasHumanForm and Zora_Armor and ((Setting.skipLakebedEntrance equals True) or (Iron_Boots and CanUseWaterBombs))"
       },
       {
         "ConnectedArea": "Lakebed Temple Entrance",
