--- a/Generator/World/Rooms/Overworld/Snowpeak Province/Snowpeak.jsonc
+++ b/Generator/World/Rooms/Overworld/Snowpeak Province/Snowpeak.jsonc
@@ -5,7 +5,7 @@
     [
       {
         "ConnectedArea": "Snowpeak Climb Upper",
-        "Requirements": "((Setting.skipSnowpeakEntrance equals True) or (Room.Zoras_Domain and (Progressive_Fishing_Rod, 2))) and Shadow_Crystal"
+        "Requirements": "((Setting.skipSnowpeakEntrance equals True) or (Room.Zoras_Domain and HasHumanForm and (Progressive_Fishing_Rod, 2))) and HasWolfForm"
       },
       {
         "ConnectedArea": "Zoras Domain",
@@ -24,19 +24,19 @@
     [
       {
         "ConnectedArea": "Snowpeak Climb Lower",
-        "Requirements": "((Setting.skipSnowpeakEntrance equals True) or (Room.Zoras_Domain and (Progressive_Fishing_Rod, 2))) and Shadow_Crystal"
+        "Requirements": "((Setting.skipSnowpeakEntrance equals True) or (Room.Zoras_Domain and HasHumanForm and (Progressive_Fishing_Rod, 2))) and HasWolfForm"
       },
       {
         "ConnectedArea": "Snowpeak Summit Upper",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       },
       {
         "ConnectedArea": "Snowpeak Ice Keese Grotto",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       },
       {
         "ConnectedArea": "Snowpeak Freezard Grotto",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       }
     ],
     "Checks":
@@ -80,11 +80,11 @@
     [
       {
         "ConnectedArea": "Snowpeak Summit Lower",
-        "Requirements": "CanDefeatShadowBeast and ((Setting.bonksDoDamage equals False) or ((Setting.bonksDoDamage equals True) and ((Setting.damageMagnification not_equal OHKO) or CanUseBottledFairy)))"
+        "Requirements": "HasHumanForm and CanDefeatShadowBeast and ((Setting.bonksDoDamage equals False) or ((Setting.bonksDoDamage equals True) and ((Setting.damageMagnification not_equal OHKO) or CanUseBottledFairy)))"
       },
       {
         "ConnectedArea": "Snowpeak Climb Upper",
-        "Requirements": "Shadow_Crystal"
+        "Requirements": "HasWolfForm"
       }
     ],
     "Checks":
@@ -101,11 +101,11 @@
     [
       {
         "ConnectedArea": "Snowpeak Ruins Left Door",
-        "Requirements": "true"
+        "Requirements": "HasHumanForm"
       },
 	  {
 	    "ConnectedArea": "Snowpeak Ruins Right Door",
-		"Requirements": "true"
+		"Requirements": "HasHumanForm"
 	  }
     ],
     "Checks":
