Ordon + Faron Overworld Checks
more glitchless starting form

--- a/Generator/World/Checks/Overworld/Faron Province/Coro Bottle.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Coro Bottle.jsonc
@@ -1,5 +1,5 @@
 {
-  "requirements": "canCompletePrologue",
+  "requirements": "HasHumanForm and canCompletePrologue",
   "checkCategory": [ "Overworld", "Npc", "Faron Woods", "ARC" ],
   "itemId": "Coro_Bottle"
 }
