--- a/Generator/World/Checks/Overworld/Faron Province/Faron Mist Cave Lantern Chest.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Faron Mist Cave Lantern Chest.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "Lantern",
+    "requirements": "HasHumanForm and Lantern",
     "checkCategory": ["Overworld", "Chest", "Faron Woods", "ARC"],
     "itemId": "Piece_of_Heart"
 }
