--- a/Generator/World/Checks/Overworld/Ordona Province/Sera Shop Slingshot.jsonc
+++ b/Generator/World/Checks/Overworld/Ordona Province/Sera Shop Slingshot.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "true",
+    "requirements": "HasHumanForm",
     "checkCategory": ["Overworld", "Shop", "Ordona Province", "ARC"],
     "itemId": "Slingshot"
 }
