--- a/Generator/World/Checks/Overworld/Faron Province/Faron Field Bridge Chest.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Faron Field Bridge Chest.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "(Progressive_Clawshot, 1)",
+    "requirements": "HasHumanForm and (Progressive_Clawshot, 1)",
     "checkCategory": ["Overworld", "Chest", "Hyrule Field - Faron Province", "ARC"],
     "itemId": "Orange_Rupee"
 }
