--- a/Generator/World/Checks/Overworld/Faron Province/Faron Field Female Beetle.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Faron Field Female Beetle.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "Boomerang or (Progressive_Clawshot, 1)",
+    "requirements": "HasHumanForm and (Boomerang or (Progressive_Clawshot, 1))",
     "checkCategory": ["Overworld", "Golden Bug", "Hyrule Field - Faron Province", "DZX"],
     "itemId": "Female_Beetle"
 }
