--- a/Generator/World/Checks/Overworld/Faron Province/Faron Field Poe.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Faron Field Poe.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "Shadow_Crystal and CanCompleteMDH",
+    "requirements": "HasWolfForm and CanCompleteMDH",
     "checkCategory": ["Overworld", "Poe", "Hyrule Field - Faron Province"],
     "itemId": "Poe_Soul"
 }
