--- a/Generator/World/Checks/Overworld/Faron Province/Faron Field Tree Heart Piece.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Faron Field Tree Heart Piece.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "Boomerang or (Progressive_Clawshot, 1)",
+    "requirements": "HasHumanForm and (Boomerang or (Progressive_Clawshot, 1))",
     "checkCategory": ["Overworld", "Chest", "Hyrule Field - Faron Province", "ARC"],
     "itemId": "Piece_of_Heart"
 }
