--- a/Generator/World/Checks/Overworld/Faron Province/Faron Woods Owl Statue Chest.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Faron Woods Owl Statue Chest.jsonc
@@ -1,5 +1,5 @@
 {
-  "requirements": "true",
+  "requirements": "HasHumanForm",
   "checkCategory": [ "Overworld", "Chest", "Faron Woods", "ARC" ],
   "itemId": "Piece_of_Heart"
 }
