--- a/Generator/World/Checks/Overworld/Faron Province/Faron Woods Owl Statue Sky Character.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Faron Woods Owl Statue Sky Character.jsonc
@@ -1,5 +1,5 @@
 {
-  "requirements": "canClearForest and (Progressive_Dominion_Rod, 2)",
+  "requirements": "HasHumanForm and canClearForest and (Progressive_Dominion_Rod, 2)",
   "checkCategory": [ "Overworld", "Faron Woods", "Sky Book" ],
   "itemId": "Progressive_Sky_Book"
 }
