--- a/Generator/World/Checks/Overworld/Faron Province/Lost Woods Boulder Poe.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Lost Woods Boulder Poe.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "Shadow_Crystal and (CanDefeatSkullKid or (Setting.totEntrance equals Open) or (Setting.totEntrance equals OpenGrove)) and canSmash",
+    "requirements": "HasWolfForm and (CanDefeatSkullKid or (Setting.totEntrance equals Open) or (Setting.totEntrance equals OpenGrove)) and canSmash",
     "checkCategory": ["Overworld", "Poe", "Sacred Grove"],
     "itemId": "Poe_Soul"
 }
