--- a/Generator/World/Checks/Overworld/Faron Province/Sacred Grove Male Snail.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Sacred Grove Male Snail.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "(Progressive_Clawshot, 1) or Boomerang",
+    "requirements": "HasHumanForm and ((Progressive_Clawshot, 1) or Boomerang)",
     "checkCategory": ["Overworld", "Golden Bug", "Sacred Grove", "DZX"],
     "itemId": "Male_Snail"
 }
