--- a/Generator/World/Checks/Overworld/Faron Province/Sacred Grove Master Sword Poe.jsonc
+++ b/Generator/World/Checks/Overworld/Faron Province/Sacred Grove Master Sword Poe.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "Shadow_Crystal",
+    "requirements": "HasWolfForm",
     "checkCategory": ["Overworld", "Poe", "Sacred Grove"],
     "itemId": "Poe_Soul"
 }
