--- a/Generator/World/Checks/Overworld/Ordona Province/Herding Goats Reward.jsonc
+++ b/Generator/World/Checks/Overworld/Ordona Province/Herding Goats Reward.jsonc
@@ -1,5 +1,5 @@
 {
-  "requirements": "canCompletePrologue and Room.Ordon_Bos_House and CanChangeTime",
+  "requirements": "HasHumanForm and canCompletePrologue and Room.Ordon_Bos_House and CanChangeTime",
   "checkCategory": [ "Overworld", "Npc", "Ordona Province", "ARC" ],
   "itemId": "Piece_of_Heart"
 }
