--- a/Generator/World/Checks/Overworld/Ordona Province/Links Basement Chest.jsonc
+++ b/Generator/World/Checks/Overworld/Ordona Province/Links Basement Chest.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "Lantern",
+    "requirements": "HasHumanForm and Lantern",
     "checkCategory": ["Overworld", "Chest", "Ordona Province", "ARC"],
     "itemId": "Purple_Rupee_Links_House"
 }
