--- a/Generator/World/Checks/Overworld/Ordona Province/Uli Cradle Delivery.jsonc
+++ b/Generator/World/Checks/Overworld/Ordona Province/Uli Cradle Delivery.jsonc
@@ -1,5 +1,5 @@
 {
-    "requirements": "CanChangeTime",
+    "requirements": "HasHumanForm and CanChangeTime",
     "checkCategory": ["Overworld", "Ordona Province", "ARC"],
     "itemId": "Progressive_Fishing_Rod"
 }
